fixing the gap

--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ header nav .links a .radial.pending,
 }
 
 .section.hero {
-  padding: 100px 0 140px;
+  padding: 150px 0 170px;
 }
 
 .section.hero h4 {
